# cmd/server/docs/swagger/api.swagger.json
@@ -21,6 +21,28 @@
     "application/json"
   ],
   "paths": {
+    "/v1/blueprints": {
+      "get": {
+        "operationId": "BlueprintService_GetBlueprints",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetBlueprintListResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "BlueprintService"
+        ]
+      }
+    },
     "/v1/generate": {
       "post": {
         "operationId": "BlueprintService_GenerateProject",
@@ -83,6 +105,17 @@
         }
       }
     },
+    "v1Blueprint": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string"
+        },
+        "spec": {
+          "$ref": "#/definitions/v1Spec"
+        }
+      }
+    },
     "v1GenerateProjectRequest": {
       "type": "object",
       "properties": {
@@ -103,6 +136,59 @@
       "properties": {
         "downloadUrl": {
           "type": "string"
+        }
+      }
+    },
+    "v1GetBlueprintListResponse": {
+      "type": "object",
+      "properties": {
+        "blueprints": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1Blueprint"
+          }
+        }
+      }
+    },
+    "v1Option": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "type": {
+          "type": "string"
+        },
+        "default": {
+          "type": "string"
+        },
+        "options": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "v1Spec": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "options": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1Option"
+          }
         }
       }
     }
